add preview mode inside vscode

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "color": "#2F495E",
     "theme": "dark"
   },
-  "version": "0.0.6",
+  "version": "0.0.7",
   "engines": {
     "vscode": "^1.48.0"
   },
@@ -37,10 +37,23 @@
       {
         "command": "Nuxt.startDevServer",
         "title": "Nuxt: Start Dev Server"
+      },
+      {
+        "command": "Nuxt.openApp",
+        "title" : "Nuxt: Open App"
       }
     ],
     "menus": {},
-    "configuration": {}
+    "configuration": {
+      "title": "Nuxt",
+      "properties": {
+        "nuxt.openInTheBrowser": {
+          "type": "boolean",
+          "default": true,
+          "description": "If checked, vscode will open the browser when you click on the 'Open App' button, otherwise it will open the app side by side with the code you were editing."
+        }
+      }
+    }
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --config webpack.config.dev.js",
