--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-vscode-extension",
   "displayName": "Nuxt",
   "publisher": "allanoricil",
-  "description": "This extension aims to simplify the workflow when working with Nuxt from within VS Code",
+  "description": "This extension aims to simplify the workflow when coding with Nuxt in VS Code",
   "preview": true,
   "author": {
     "name": "Allan Oricil",
@@ -17,7 +17,7 @@
     "color": "#2F495E",
     "theme": "dark"
   },
-  "version": "0.0.8",
+  "version": "0.0.9",
   "engines": {
     "vscode": "^1.48.0"
   },
@@ -40,26 +40,29 @@
       },
       {
         "command": "Nuxt.openApp",
-        "title" : "Nuxt: Open App"
+        "title": "Nuxt: Open App"
+      },
+      {
+        "command": "Nuxt.setPortNumber",
+        "title": "Nuxt: Set Port Number"
       }
     ],
     "menus": {},
     "configuration": {
       "title": "Nuxt",
       "properties": {
-        "nuxt.openInTheBrowser": {
-          "type": "boolean",
-          "default": true,
-          "description": "If checked, vscode will open the browser when you click on the 'Open App' button, otherwise it will open the app side by side with the code you were editing."
+        "nuxt.portNumber": {
+          "type": "number",
+          "default": 3000,
+          "description": "It is the port number that the Nuxt app is served at. If you empty this property, the app is served on port 3000"
         }
       }
     }
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --config webpack.config.dev.js",
+    "dev": "webpack --config webpack.config.dev.js",
     "test": "node ./node_modules/vscode/bin/test",
-    "build": "node .build/build.js",
-    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
@@ -80,6 +83,6 @@
   "dependencies": {
     "@types/vscode": "^1.56.0",
     "has-yarn": "^2.1.0",
-    "open": "^8.0.8"
+    "tcp-port-used": "^1.0.2"
   }
 }
