--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "color": "#2F495E",
     "theme": "dark"
   },
-  "version": "0.0.10",
+  "version": "0.0.11",
   "engines": {
     "node": "12.22.0",
     "vscode": "^1.48.0"
@@ -30,11 +30,15 @@
     "vue"
   ],
   "activationEvents": [
-    "workspaceContains:nuxt.config.js"
+    "*"
   ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
+      {
+        "command": "Nuxt.createApp",
+        "title": "Nuxt: Create App"
+      },
       {
         "command": "Nuxt.startDevServer",
         "title": "Nuxt: Start Dev Server"
