--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "version": "0.0.13",
   "engines": {
     "node": "12.22.0",
-    "vscode": "^1.48.0"
+    "vscode": "^1.60.0"
   },
   "categories": [
     "Other"
@@ -67,7 +67,21 @@
   "scripts": {
     "dev": "webpack --config webpack.config.dev.js",
     "test": "node ./node_modules/vscode/bin/test",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "prettier:fix": "prettier --write src/**/*.js --ignore-unknown",
+    "lint:js": "eslint . --ext .js,.jsx",
+    "lint:js:fix": "npm run lint:js -- --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "prettier --write --ignore-unknown",
+      "eslint . --fix"
+    ]
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
@@ -76,7 +90,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^4.0.0",
-    "eslint": "^5.13.0",
+    "eslint": "^7.32.0",
     "javascript-obfuscator": "^2.10.3",
     "nodemon": "^2.0.7",
     "terser-webpack-plugin": "^4.2.3",
@@ -87,8 +101,11 @@
   },
   "dependencies": {
     "@types/vscode": "^1.56.0",
+    "eslint-config-prettier": "^8.3.0",
     "has-yarn": "^2.1.0",
     "i18n": "^0.13.3",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.4.0",
     "tcp-port-used": "^1.0.2"
   }
 }
