--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,14 +6,14 @@ on:
       - master
 
 jobs:
-  build-webview:
+  build_and_publish_extension:
     name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 12.22.0
       - name: Build Extension
         run: |
           yarn install
